--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,3 @@
-@import "components";
 @import "_definitions";
 
 *{
@@ -73,6 +72,7 @@ body{
 
     &:active{
       background-color: var(--color-grey-light);
+      box-shadow: 3px 3px 2px black;
     }
   }
 
@@ -113,6 +113,7 @@ body{
   box-shadow: 2px 2px 2px black;
   font-size: 22px;
   border-radius: 1px;
+  overflow: hidden;
 
   @include respond(phone-land){
     height:12vh;
